@@ -1,3 +1,8 @@
+2007-08-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf.c: (_bfd_elf_make_section_from_phdr): Properly handle
+	bss segments.
+
 2007-08-06  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* Makefile.am (BUILD_HFILES): Clean bfd_stdint.h.
